--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ activity = "1.8.0"
 constraintlayout = "2.2.1"
 glide = "4.16.0"
 gson = "2.13.1"
+materialVersion = "1.8.0"
 navigationUiKtx = "2.9.6"
 retrofit = "3.0.0"
 
@@ -39,6 +40,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide"}
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+material-v180 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 
